--- a/JobBoard.UI.MVC/JobBoard.UI.MVC.csproj
+++ b/JobBoard.UI.MVC/JobBoard.UI.MVC.csproj
@@ -230,6 +230,9 @@
     <Content Include="Content\images\test3.jpg" />
     <Content Include="Content\js\bootstrap.js" />
     <Content Include="Content\js\jquery-2.1.4.min.js" />
+    <Content Include="Content\js\jquery-ui.js" />
+    <Content Include="Content\css\jquery-ui.min.css" />
+    <Content Include="Content\js\jquery-ui.min.js" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
