locked down controller, views, buttons

--- a/JobBoard.UI.MVC/JobBoard.UI.MVC.csproj
+++ b/JobBoard.UI.MVC/JobBoard.UI.MVC.csproj
@@ -261,6 +261,7 @@
     <Content Include="_Archive\images\e4.jpg" />
     <Content Include="_Archive\images\e5.jpg" />
     <Content Include="_Archive\images\e6.jpg" />
+    <Content Include="_Archive\images\if_PixelKit_5-Oclock-Shades-Icon-Set__0005_5_208267.png" />
     <Content Include="_Archive\images\loc1.jpg" />
     <Content Include="_Archive\images\loc2.jpg" />
     <Content Include="_Archive\images\loc3.jpg" />
