--- a/JobBoard.Data.EF/JobBoard.Data.EF.csproj
+++ b/JobBoard.Data.EF/JobBoard.Data.EF.csproj
@@ -78,6 +78,11 @@
     <Compile Include="Location.cs">
       <DependentUpon>JobBoardModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Metadata\ApplicationMetadata.cs" />
+    <Compile Include="Metadata\AspNetUserMetadata.cs" />
+    <Compile Include="Metadata\LocationMetadata.cs" />
+    <Compile Include="Metadata\OpenPositionMetadata.cs" />
+    <Compile Include="Metadata\PositionMetadata.cs" />
     <Compile Include="OpenPosition.cs">
       <DependentUpon>JobBoardModel.tt</DependentUpon>
     </Compile>
@@ -114,9 +119,7 @@
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Metadata\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
