--- a/JobBoard.UI.MVC/bin/JobBoard.UI.MVC.dll.config
+++ b/JobBoard.UI.MVC/bin/JobBoard.UI.MVC.dll.config
@@ -9,8 +9,13 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
+    <!--LOCAL CONNECTION STRINGS-->
     <add name="DefaultConnection" connectionString="Data Source=.\sqlexpress;Initial Catalog=JobBoard;Integrated Security=true" providerName="System.Data.SqlClient" />
     <add name="JobBoardEntities" connectionString="metadata=res://*/JobBoardModel.csdl|res://*/JobBoardModel.ssdl|res://*/JobBoardModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sqlexpress;initial catalog=JobBoard;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    
+    <!--REMOTE-->
+    <!--<add name="DefaultConnection" connectionString="Data Source=SQL7001.site4now.net;Initial Catalog=DB_A2B8E5_d1709nsummervill;User Id=DB_A2B8E5_d1709nsummervill_admin;Password=Skater09!;" providerName="System.Data.SqlClient" />
+    <add name="JobBoardEntities" connectionString="metadata=res://*/JobBoardModel.csdl|res://*/JobBoardModel.ssdl|res://*/JobBoardModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=SQL7001.site4now.net;Initial Catalog=DB_A2B8E5_d1709nsummervill;User Id=DB_A2B8E5_d1709nsummervill_admin;Password=Skater09!;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
