Revert "deletable commit"
This reverts commit 3cefe6c92ffc1636c219662c6a1eb4704a6322e5.

--- a/JobBoard.Data.EF/JobBoard.Data.EF.csproj
+++ b/JobBoard.Data.EF/JobBoard.Data.EF.csproj
@@ -54,13 +54,10 @@
     <Compile Include="Application.cs">
       <DependentUpon>JobBoardModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="AspNetRole.cs">
+      <DependentUpon>JobBoardModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="AspNetUser.cs">
-      <DependentUpon>JobBoardModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="AspNetUserRole.cs">
-      <DependentUpon>JobBoardModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="C__MigrationHistory.cs">
       <DependentUpon>JobBoardModel.tt</DependentUpon>
     </Compile>
     <Compile Include="JobBoardModel.Context.cs">
